kog         2005/10/17 11:55:05 UTC	(20051017-2975)
  Log:
  uses fcommand for lookups, cleaner and better working code. Now actually works! 
  

  Changes:	Modified:
  +136 -105	trunk/modules/memoserv/ignore.c (File Modified) 


pfish       2005/10/17 09:57:25 UTC	(20051017-2973)
  Log:
  allow ircop override
  

  Changes:	Modified:
  +3 -3		trunk/modules/chanserv/count.c (File Modified) 


pfish       2005/10/17 09:52:19 UTC	(20051017-2971)
  Log:
  Add ChanServ/COUNT:
  -ChanServ- #support: VOp: 0, HOp: 0, AOp: 7, SOp: 4
  

  Changes:	Modified:
  +2 -0		trunk/dist/example.conf (File Modified) 
  +2 -0		trunk/dist/example.userserv.conf (File Modified) 
  +8 -0		trunk/help/cservice/count (File Added) 
  +0 -11	trunk/help/cservice/raw (File Deleted) 
  +1 -0		trunk/modules/chanserv/Makefile.in (File Modified) 
  +1 -0		trunk/modules/chanserv/Makefile.win32 (File Modified) 
  +84 -0	trunk/modules/chanserv/count.c (File Added) 


nenolod     2005/10/17 07:54:35 UTC	(20051017-2969)
  Log:
  - Update .depend for org.atheme.services.binary.
  

  Changes:	Modified:
  +319 -1	trunk/src/.depend (File Modified) 


nenolod     2005/10/17 07:52:19 UTC	(20051017-2967)
  Log:
  - Add memoserv/ignore to win32 makefile.
  - Initial work on an OS/2 port. Because I can, you see.
  

  Changes:	Modified:
  +10 -2	trunk/include/atheme.h (File Modified) 
  +1 -2		trunk/libatheme/linker.c (File Modified) 
  +1 -0		trunk/modules/memoserv/Makefile.win32 (File Modified) 


pfish       2005/10/17 06:09:03 UTC	(20051017-2965)
  Log:
  make notice()'s more consistent 
  

  Changes:	Modified:
  +1 -1		trunk/modules/memoserv/ignore.c (File Modified) 
  +1 -1		trunk/modules/memoserv/send.c (File Modified) 


jilles      2005/10/17 01:18:59 UTC	(20051017-2963)
  Log:
  Make find_service() a bit more efficient (no more 64k hash
  table traversals).
  

  Changes:	Modified:
  +44 -17	trunk/src/servtree.c (File Modified) 


jilles      2005/10/17 00:56:02 UTC	(20051017-2961)
  Log: